Wed Jan 19 13:22:13 2000  Lars Wirzenius  <liw@wapit.com>

	* doc/dialup.txt: Added. E-mail from Roger Willcocks describing
	how to set up a dialup line for use with the gateway.

Wed Jan 19 13:18:22 2000  Lars Wirzenius  <liw@wapit.com>

	* gwlib/gwlib.h: Added #include "config.h".

Wed Jan 19 11:38:05 2000  Lars Wirzenius  <liw@wapit.com>

	* gwlib/http.c: Applied parts of patch from Erik Bos. We're going
	to do the header addition stuff in another way soon ourselves.

Wed Jan 19 10:33:39 2000  Lars Wirzenius  <liw@wapit.com>

	* configure.in: Added check for inet_aton in arpa/inet.h, using
	GW_HAVE_FUNC_FROM. This should make things work for Solaris.

Wed Jan 19 10:21:39 2000  Lars Wirzenius  <liw@wapit.com>

	* gw/wsp.c: Silence WMLScript compiler tracing info.
	
	* gwlib/getnameinfo.h: Bugfix: use #ifdef, not #if, to test whether
	a macro is defined.

2000-01-18    mikael.gueck@wapit.com

	* gw/smsc_cimd.c: submit_sms UDH-enabling fix

Tue Jan 18 16:02:49 2000  Lars Wirzenius  <liw@wapit.com>

	* Release 0.3.

2000-01-18    <rpr@rpr.wapit.com>

	* test/fakewap.c: Added new program by Antti Saarenheimo

Tue Jan 18 14:06:09 2000  Lars Wirzenius  <liw@wapit.com>

	* wmlscript/wmlsc.c, wmlscript/wsalloc.c,
	wmlscript/wsstream_data.c: Put in patch from Markku Rossi, to
	fix bug in function that compiles from data instead of file,
	and various helpfulness to wmlsc.

	* gw/wsp.c: Use internal WMLScript compiler.

Tue Jan 18 12:55:36 2000  Lars Wirzenius  <liw@wapit.com>

	* gw/wsp.c: Use WMLScript compiler as an external process. This
	works, the internal one has problems (or else I have problems
	using it).
	
	* gw/wsp_state-decl.h: Commented out, at least temporarily, rows
	that handle method invocations before session has been opened.

Mon Jan 17 17:47:37 2000  Lars Wirzenius  <liw@wapit.com>

	* gw/wsp.c: Added WMLScript compilation (untested, though), and
	fixed server transaction ID generation (they weren't generated,
	nor used properly).
